patches from dax!
Fix XHTML errors
Fix broken links and copyright notice.

--- a/tweaks.css
+++ b/tweaks.css
@@ -596,7 +596,7 @@ p.smaller
 
 td.progress
 {
-  background-image: url("dark_green4.png");
+  background-color: #006600;
   background-position: 0% 64.9%;
   background-repeat: no-repeat;
 }
