first round of stylesheet cleanup

--- a/style.css
+++ b/style.css
@@ -1,557 +1,8 @@
-.red
-{
-	color: #e00000 !important;
-}
-.green
-{
-	color: green !important;
-}
-div.large
-{
-	font-family: arial, helvetica !important;
-	font-size: 14pt !important;
-}
-div.normal
-{
-	font-family: arial, helvetica;
-	font-size: 10pt;
-}
-div.normal *
-{
-	font-family: arial, helvetica;
-	font-size: 10pt;
-}
-body
-{
-	font-family: arial, helvetica;
-	font-size: 10pt;
-	left: 0;
-	margin: 0;
-	position: absolute;
-	top: 0;
-	width: 100%;
-}
-pre
-{
-	font-family: arial, helvetica;
-	font-size: 10pt;
-}
-pre.small
-{
-	font-family: arial, helvetica;
-	font-size: 8pt;
-}
-blockquote.fixed
-{
-	font-family: arial, helvetica;
-	font-size: 10pt;
-}
-blockquote.fixedsmall
-{
-	font-family: arial, helvetica;
-	font-size: 8pt;
-}
-.header
-{
-	background: #5c5f72;
-	margin-bottom: 0 !important;
-	margin-left: 0 !important;
-	margin-right: 0 !important;
-	margin-top: 0 !important;
-	padding-bottom: 0 !important;
-	padding-left: 0 !important;
-	padding-right: 0 !important;
-	padding-top: 0 !important;
-}
-td.caption
-{
-	font-size: 9pt;
-	font-weight: bold;
-}
-td.content
-{
-	padding-left: 3em;
-	padding-right: 3em;
-	padding-top: 2em;
-}
-td.content2
-{
-	padding-left: 3em;
-	padding-right: 3em;
-	padding-top: 1em;
-}
-.noborder
-{
-	border-style: none;
-	margin-bottom: 0 !important;
-	margin-left: 0 !important;
-	margin-right: 0 !important;
-	margin-top: 0 !important;
-	padding-bottom: 0 !important;
-	padding-left: 0 !important;
-	padding-right: 0 !important;
-	padding-top: 0 !important;
-}
-.logo
-{
-	margin-bottom: 0 !important;
-	margin-left: 0 !important;
-	margin-right: 0 !important;
-	margin-top: 0 !important;
-	padding-bottom: 0 !important;
-	padding-left: 0 !important;
-	padding-right: 0 !important;
-	padding-top: 0 !important;
-}
-.middle
-{
-	vertical-align: middle;
-}
-.width50
-{
-	width: 50%;
-}
-.autowidth
-{
-	width: auto;
-}
-.center
-{
-	text-align: center;
-}
-b
-{
-	color: #525668;
-}
-b.brightred
-{
-	color: #ff0000 !important;
-	font-weight: 900 !important;
-}
-b.freenode
-{
-	font-family: serif;
-	font-weight: 900;
-}
-span.freenode
-{
-	color: #525668;
-	font-family: serif;
-	font-weight: 900;
-}
-a:link *
-{
-	color: #000098 !important;
-}
-a:visited *
-{
-	color: #000098 !important;
-}
-a.pre:link *
-{
-	color: #000098 !important;
-}
-a.pre:visited *
-{
-	color: #000098 !important;
-}
-a.presmall:link *
-{
-	color: #000098 !important;
-}
-a.presmall:visited *
-{
-	color: #000098 !important;
-}
-a
-{
-	text-decoration: none;
-}
-a:hover
-{
-	text-decoration: underline;
-}
-a:link
-{
-	color: #000098 !important;
-	font-weight: bold;
-}
-a:visited
-{
-	color: #000098 !important;
-	font-weight: bold;
-}
-a.pre:link
-{
-	color: #000098 !important;
-	font-family: arial, helvetica;
-	font-size: 12pt;
-}
-a.pre:visited
-{
-	color: #000098 !important;
-	font-family: arial, helvetica;
-	font-size: 12pt;
-}
-a.presmall:link
-{
-	color: #000098 !important;
-	font-family: arial, helvetica;
-	font-size: 10pt;
-}
-a.presmall:visited
-{
-	color: #000098 !important;
-	font-family: arial, helvetica;
-	font-size: 10pt;
-}
-b.box
-{
-	color: #525668;
-}
-a.box:link
-{
-	color: black;
-	font-weight: normal;
-}
-a.box:visited
-{
-	font-weight: normal;
-}
-a.boxbold:link
-{
-	font-weight: bold;
-}
-a.boxbold:visited
-{
-	font-weight: bold;
-}
-h1
-{
-	color: #525668;
-	font-size: 18pt;
-	font-weight: bold;
-	margin-top: 0;
-}
-h2
-{
-	color: #525668;
-	font-size: 16pt;
-	font-weight: bold;
-	margin-top: 0;
-}
-h3
-{
-	color: #525668;
-	font-size: 14pt;
-	font-weight: bold;
-	margin-top: 0;
-}
-img.wide
-{
-	margin-bottom: 8px;
-	margin-left: 0;
-	margin-right: 4px;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-}
-img.narrow
-{
-	margin-bottom: 4px;
-	margin-left: 0;
-	margin-right: 2px;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-}
-div.bar
-{
-	background-color: #999ba8;
-	border-bottom-style: solid;
-	border-bottom-width: thin;
-	height: 22px;
-	margin-bottom: 0;
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 0;
-	padding-right: 0;
-	padding-top: 0;
-	width: 100%;
-}
-ul
-{
-	margin-bottom: 0;
-	padding-bottom: 0;
-}
-div.small
-{
-	margin-bottom: 10px;
-	margin-left: 0;
-	margin-right: 0;
-	margin-top: 0;
-	padding-bottom: 0;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 10px;
-	text-align: center;
-	width: auto;
-}
-div.small *
-{
-	font-family: arial, helvetica !important;
-	font-size: 8pt !important;
-}
-div.notebox
-{
-	background-color: #e6e6e6;
-	border-style: outset;
-	border-width: 1px;
-	font-family: arial, helvetica !important;
-	font-size: 9pt;
-	margin: 0 !important;
-	padding: 4px !important;
-	text-align: center;
-	vertical-align: middle;
-	width: 140px;
-}
-form.navcontrib
-{
-	background-color: #e6e6e6;
-	border-style: outset;
-	border-width: 1px;
-	font-family: arial, helvetica !important;
-	font-size: 10pt;
-	margin: 0 !important;
-	padding: 4px !important;
-	text-align: center;
-	vertical-align: middle;
-	width: 140px;
-}
-form.navcontrib *
-{
-	font-family: arial, helvetica !important;
-	font-size: 10pt;
-}
-form.whitebox
-{
-	background-color: #ffffff;
-	border-style: outset;
-	border-width: 1px;
-	font-family: arial, helvetica !important;
-	font-size: 10pt;
-	margin: 0 !important;
-	padding: 4px !important;
-	text-align: center;
-	vertical-align: middle;
-	width: 140px;
-}
-form.whitebox *
-{
-	font-family: arial, helvetica !important;
-	font-size: 10pt;
-}
-form.contrib
-{
-	background-color: #eeeeee;
-	border-style: outset;
-	border-width: 1px;
-	float: left;
-	font-family: arial, helvetica !important;
-	font-size: 12px !important;
-	margin-bottom: 0 !important;
-	margin-left: 20px !important;
-	margin-right: 30px !important;
-	margin-top: 0 !important;
-	padding: 8px !important;
-	text-align: center;
-	vertical-align: middle;
-	width: 220px;
-}
-form.contrib *
-{
-	font-family: arial, helvetica !important;
-	font-size: 10px !important;
-	margin: 2px !important;
-	padding: 0 !important;
-}
-form.contrib select
-{
-	width: 215px;
-}
-form.contact
-{
-	background-color: #eeeeee;
-	border-style: outset;
-	border-width: 1px;
-	float: left;
-	font-family: arial, helvetica !important;
-	font-size: 9pt !important;
-	margin-bottom: 0 !important;
-	margin-left: 0 !important;
-	margin-right: 40px !important;
-	margin-top: 0 !important;
-	padding: 6px !important;
-	text-align: center;
-	vertical-align: middle;
-	width: 320px;
-}
-form.contact *
-{
-	font-family: arial, helvetica !important;
-	font-size: 9pt !important;
-	margin: 2px !important;
-	padding: 0 !important;
-}
-form.contact .long
-{
-	width: 15em;
-}
-form.contact .phone
-{
-	width: 8em;
-}
-form.contact .state
-{
-	width: 4em;
-}
-form.contact .terms
-{
-	width: 23em;
-}
-form.contact .zip
-{
-	width: 6em;
-}
-form.contact td.input
-{
-	text-align: center;
-	width: 16em;
-}
-form.contact td.label
-{
-	text-align: center;
-	width: 8em;
-}
-div.small .wide
-{
-	width: 140px;
-}
-div.contact
-{
-	font-family: arial, helvetica !important;
-	font-size: 9pt !important;
-}
-ol.contact
-{
-	font-family: arial, helvetica !important;
-	font-size: 9pt !important;
-}
-ol.contact *
-{
-	font-family: arial, helvetica !important;
-	font-size: 9pt !important;
-}
-div.contrib
-{
-	font-family: arial, helvetica !important;
-	font-size: 10pt !important;
-}
-div.contrib *
-{
-	font-family: arial, helvetica !important;
-	font-size: 10pt !important;
-}
-div.withborder
-{
-	border-bottom-style: solid;
-	border-left-style: none;
-	border-right-style: none;
-	border-top-style: none;
-	border-width: thin;
-	margin-bottom: 0 !important;
-	margin-left: 0 !important;
-	margin-right: 0 !important;
-	margin-top: 0 !important;
-	padding-bottom: 0 !important;
-	padding-left: 0 !important;
-	padding-right: 0 !important;
-	padding-top: 0 !important;
-}
-.bordered
-{
-	background-color: #eeeeee;
-	border-style: outset;
-	border-width: 1px;
-	text-align: center;
-}
-.centered
-{
-	text-align: center;
-	vertical-align: middle;
-}
-.centeredsmall
-{
-	font-size: 9pt !important;
-	text-align: center;
-	vertical-align: middle;
-}
-.left
-{
-	text-align: left !important;
-}
-p.smaller
-{
-	font-family: arial, helvetica !important;
-	font-size: 9pt !important;
-}
-td.progress
-{
-	background-color: #006600;
-	background-position: 64.9% 0%;
-	background-repeat: no-repeat;
-}
-td.navbar
-{
-	font-size: 9pt;
-	padding: 1em;
-}
-table.serverlist
-{
-	border: ridge 2px;
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-tr.sl_header td
-{
-	border-top: 2px ridge;
-	color: #525668;
-	font-weight: bold;
-}
-table.serverlist td
-{
-	border-right: 2px ridge;
-	padding: 5px;
-}
-tr.sl_inactive td
-{
-	text-decoration: line-through;
-}
-b
-{
-	color: #525668;
-}
 body
 {
 	background-color: #b4b4c0;
 	color: #000000;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 	font-size: smaller;
 	margin: 0;
 	width: 100%;
@@ -605,6 +56,10 @@ body
 	border: 0;
 	margin: 0;
 	padding: 0;
+}
+b
+{
+	color: #525668;
 }
 .freenode
 {
@@ -686,10 +141,9 @@ form.whitebox
 	background-color: #ffffff;
 	border-style: outset;
 	border-width: 1px;
-	font-family: arial, helvetica !important;
 	font-size: 10pt;
-	margin: 0 !important;
-	padding: 4px !important;
+	margin: 0;
+	padding: 4px;
 	text-align: center;
 	vertical-align: middle;
 	width: 140px;
@@ -771,4 +225,3 @@ table.modetable td
 	</span> */
 	font-style: oblique;
 }
-
