--- a/style.css
+++ b/style.css
@@ -7,6 +7,26 @@ body
 	margin: 0;
 	width: 100%;
 }
+a:link, a:link .freenode  {
+	color: #000098;
+	font-weight: bold;
+	text-decoration: none;
+}
+a:visited, a:visited .freenode {
+	color: #000058;
+	font-weight: bold;
+	text-decoration: none;
+}
+a:hover, a:hover .freenode {
+	color: #000098;
+	font-weight: bold;
+	text-decoration: underline;
+}
+a:active, a:active .freenode {
+	color: #0000e8;
+	font-weight: bold;
+	text-decoration: none;
+}
 .header
 {
 	background-color: #5c5f72;
@@ -66,16 +86,6 @@ b
 	color: #525668;
 	font-family: serif;
 	font-weight: bold;
-}
-a
-{
-	color: #000098;
-	font-weight: bold;
-	text-decoration: none;
-}
-a:hover
-{
-	text-decoration: underline;
 }
 h1
 {
