--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
-* {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-body {
+body
+{
 	background-color: #b4b4c0;
 	color: #000000;
 	font-family: Helvetica, Arial, sans-serif;
@@ -11,110 +7,66 @@ body {
 	margin: 0;
 	width: 100%;
 }
-
-/**
- * GRID
- */
-.bodyframe {
-	margin-right: auto;
-	margin-left: auto;
-	padding-right: 30px;
-	padding-left: 30px;
-	overflow: auto;
-	padding-top: 0.7em;
-	width: 100%;
-	display: block;
-}
-div.bodyframe {
-	padding-top: 30px;
-	padding-bottom: 30px;
-}
-[class*="col-"] {
-	float: left;
-	position: relative;
-	min-height: 1px;
-	padding-right: 15px;
-	padding-left: 15px;
-	font-weight: bold;
-	background-color: white;
-	border: #000000 solid 2px;
-	margin: 1.5em 0.5em;
-}
-[class*="col-md-12"] {
-	width: 100%;
-}
-[class*="col-md-6"] {
-	width: 50%;
-}
-.bodyframe,
-.clearfix {
-	*zoom: 1;
-}
-.bodyframe:before,
-.clearfix:before,
-.bodyframe:after,
-.clearfix:after {
-	content: "";
-	display: table;
-	line-height: 0;
-}
-.bodyframe:after,
-.clearfix:after {
-	clear: both;
-}
-.pull-left,
-[class*="col-"].pull-left {
-	float: left;
-}
-.pull-right,
-[class*="col-"].pull-right {
-	float: right;
-}
-
-/**
- * Base
- */
-a:link, a:link .freenode  {
-	color: #000098;
-	font-weight: bold;
-	text-decoration: none;
-}
-a:visited, a:visited .freenode {
-	color: #000058;
-	font-weight: bold;
-	text-decoration: none;
-}
-a:hover, a:hover .freenode {
-	color: #000098;
-	font-weight: bold;
-	text-decoration: underline;
-}
-a:active, a:active .freenode {
-	color: #0000e8;
-	font-weight: bold;
-	text-decoration: none;
-}
 .header
 {
 	background-color: #5c5f72;
 	margin: 0;
 	overflow: hidden;
+  display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.logo
+{
+	border: 0;
+	margin: 0;
+	padding: 0;
+}
+@media all and (max-width: 800px) {
+  .header {
+    flex-direction: column;
+  }
 }
 .header2
 {
 	background-color: #999ba8;
 	border-bottom: 1px solid #000000;
 }
+.bodyframe {
+  display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+}
 .menubar
 {
 	font-weight: bold;
 	float: left;
 	padding: 0.7em;
+  flex: 1 0 20;
 }
 .content
 {
 	overflow: hidden;
 	padding: 0.5em 2em;
+  flex: 4 0;
+}
+.menubar, .content
+{
+	background-color: white;
+	border: #000000 solid 2px;
+	margin: 1.5em 0.5em;
 }
 .menubar ul
 {
@@ -136,6 +88,27 @@ a:active, a:active .freenode {
 	border: 0;
 	margin: 0;
 	padding: 0;
+}
+
+a:link, a:link .freenode  {
+	color: #000098;
+	font-weight: bold;
+	text-decoration: none;
+}
+a:visited, a:visited .freenode {
+	color: #000058;
+	font-weight: bold;
+	text-decoration: none;
+}
+a:hover, a:hover .freenode {
+	color: #000098;
+	font-weight: bold;
+	text-decoration: underline;
+}
+a:active, a:active .freenode {
+	color: #0000e8;
+	font-weight: bold;
+	text-decoration: none;
 }
 b, strong
 {
