--- a/style.css
+++ b/style.css
@@ -12,15 +12,15 @@ body
 	background-color: #5c5f72;
 	margin: 0;
 	overflow: hidden;
-  display: -webkit-box;
+	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
 }
 .logo
 {
@@ -39,15 +39,16 @@ body
 	border-bottom: 1px solid #000000;
 }
 .bodyframe {
-  display: -webkit-box;
+	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
+	align-items: flex-start
+	-webkit-justify-content: flex-start;
+	justify-content: flex-start;
 }
 .menubar
 {
