--- a/style.css
+++ b/style.css
@@ -7,53 +7,61 @@ body
 	margin: 0;
 	width: 100%;
 }
-a:link, a:link .freenode  {
-	color: #000098;
-	font-weight: bold;
-	text-decoration: none;
-}
-a:visited, a:visited .freenode {
-	color: #000058;
-	font-weight: bold;
-	text-decoration: none;
-}
-a:hover, a:hover .freenode {
-	color: #000098;
-	font-weight: bold;
-	text-decoration: underline;
-}
-a:active, a:active .freenode {
-	color: #0000e8;
-	font-weight: bold;
-	text-decoration: none;
-}
 .header
 {
 	background-color: #5c5f72;
 	margin: 0;
 	overflow: hidden;
+  display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.logo
+{
+	border: 0;
+	margin: 0;
+	padding: 0;
+}
+@media all and (max-width: 600px) {
+  .header {
+    flex-direction: column;
+  }
 }
 .header2
 {
 	background-color: #999ba8;
 	border-bottom: 1px solid #000000;
 }
-.bodyframe
-{
-	overflow: hidden;
-	padding-top: 0.7em;
-	width: 100%;
+.bodyframe {
+  display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+  align-items: flex-start;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
 }
 .menubar
 {
 	font-weight: bold;
 	float: left;
 	padding: 0.7em;
+  flex: 1 0 20;
 }
 .content
 {
 	overflow: hidden;
 	padding: 0.5em 2em;
+  flex: 4 0;
 }
 .menubar, .content
 {
@@ -76,11 +84,40 @@ a:active, a:active .freenode {
 {
 	border: none;
 }
-.logo
-{
-	border: 0;
-	margin: 0;
-	padding: 0;
+@media all and (max-width: 600px) {
+  .bodyframe {
+    flex-direction: column;
+    align-items: center;
+  }
+  .content
+  {
+    order: 1;
+  }
+  .menubar
+  {
+    order: 2;
+  }
+}
+
+a:link, a:link .freenode  {
+	color: #000098;
+	font-weight: bold;
+	text-decoration: none;
+}
+a:visited, a:visited .freenode {
+	color: #000058;
+	font-weight: bold;
+	text-decoration: none;
+}
+a:hover, a:hover .freenode {
+	color: #000098;
+	font-weight: bold;
+	text-decoration: underline;
+}
+a:active, a:active .freenode {
+	color: #0000e8;
+	font-weight: bold;
+	text-decoration: none;
 }
 b, strong
 {
