--- a/style.css
+++ b/style.css
@@ -12,15 +12,15 @@ body
 	background-color: #5c5f72;
 	margin: 0;
 	overflow: hidden;
-  display: -webkit-box;
+	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
 }
 .logo
 {
@@ -28,40 +28,43 @@ body
 	margin: 0;
 	padding: 0;
 }
-@media all and (max-width: 800px) {
-  .header {
-    flex-direction: column;
-  }
+@media all and (max-width: 800px)
+{
+	.header
+	{
+		flex-direction: column;
+	}
 }
 .header2
 {
 	background-color: #999ba8;
 	border-bottom: 1px solid #000000;
 }
-.bodyframe {
-  display: -webkit-box;
+.bodyframe
+{
+	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-  align-items: flex-start;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
+	align-items: flex-start;
+	-webkit-justify-content: flex-start;
+	justify-content: flex-start;
 }
 .menubar
 {
 	font-weight: bold;
 	float: left;
 	padding: 0.7em;
-  flex: 1 0 20;
+	flex: 1 0 20;
 }
 .content
 {
 	overflow: hidden;
 	padding: 0.5em 2em;
-  flex: 4 0;
+	flex: 4 0;
 }
 .menubar, .content
 {
@@ -84,19 +87,21 @@ body
 {
 	border: none;
 }
-@media all and (max-width: 800px) {
-  .bodyframe {
-    flex-direction: column;
-    align-items: center;
-  }
-  .content
-  {
-    order: 1;
-  }
-  .menubar
-  {
-    order: 2;
-  }
+@media all and (max-width: 800px)
+{
+	.bodyframe
+	{
+		flex-direction: column;
+		align-items: center;
+	}
+	.content
+	{
+		order: 1;
+	}
+	.menubar
+	{
+		order: 2;
+	}
 }
 
 a:link, a:link .freenode  {
